@@ -51,10 +51,10 @@ Gem::Specification.new do |s|
   s.add_dependency %q<g>,             "~> 1.7", ">= 1.7.2"
 
   # introspection / docs
+  s.add_dependency %q<code>,          "~> 0.9"
   s.add_dependency %q<ori>,           "~> 0.1.0"
   s.add_dependency %q<methodfinder>,  "~> 2.0"
   s.add_dependency %q<method_locator>,"~> 0.0", ">= 0.0.4"
-  s.add_dependency %q<method_source>, "~> 0.8", ">= 0.8.2"
   s.add_dependency %q<ruby_version>,  "~> 1.0"
   s.add_dependency %q<ruby_engine>,   "~> 1.0"
   s.add_dependency %q<ruby_info>,     "~> 1.0"
